# namaste-icd11-fhir-bridge

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
backend/app/: .env  main.py
backend/app/api/routes/: auth.py  fhir.py  mapping.py  terminology.py
backend/app/core/: __init__.py  config.py  security.py
backend/app/db/: database.py  mongodb.py  redis_client.py
backend/app/models/: __init__.py  database.py  schemas.py
backend/app/services/: fhir_service.py  icd11_service.py  mapping_service.py  namaste_service.py
src/: play.py
